--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.4",
     "hover.css": "^2.0.2",
     "method-override": "^2.3.5",
+    "moment": "^2.12.0",
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10",
     "morgan": "^1.7.0"
