--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "hover.css": "^2.0.2",
+    "jsonwebtoken": "^5.7.0",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
     "mongodb": "^2.1.14",
