--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.7.0",
     "mocha": "latest",
     "chai": "latest",
-    "supertest": "latest"
+    "supertest": "latest",
+    "moment" : "2.13.0"
   }
 }
