--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.4.10",
     "morgan": "^1.7.0",
     "request": "^2.72.0",
+    "serve-favicon": "^2.3.0",
     "supertest": "latest"
   }
 }
