--- a/package.json
+++ b/package.json
@@ -29,5 +29,14 @@
     "morgan": "^1.7.0",
     "request": "^2.72.0",
     "supertest": "latest"
-  }
+  },
+    "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": []
 }
