--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.7.0",
     "request": "^2.72.0",
     "serve-favicon": "^2.3.0",
+    "stripe": "^4.5.0",
     "supertest": "latest"
   }
 }
